Fix expanded left navigation with footer overlap.

--- a/bxfinance-scenario1/src/styles/pages/accounts.scss
+++ b/bxfinance-scenario1/src/styles/pages/accounts.scss
@@ -32,10 +32,6 @@
       z-index: 0;
     }
 
-      @include media-breakpoint-up(lg) {
-        height: 400px;
-        margin-bottom: 40px;
-
         img.img-credit-card {
           max-width: 450px;
           position: absolute;
@@ -43,7 +39,6 @@
           right: -120px;
           z-index: -1;
         }
-      }
     }
 
   .content {
