--- a/bxfinance-scenario1/src/styles/pages/credit-card/application.scss
+++ b/bxfinance-scenario1/src/styles/pages/credit-card/application.scss
@@ -58,7 +58,7 @@
 }
 
 .apply-description {
-  height: 170px;
+  height: 300px;
   border: 0;
   border-radius: 13px;
   overflow: hidden;
